tests/paczka1/fuzzy1/51659878.err
Error in line 9: GCJ1kQXaOL A555 77,5
Error in line 18: jggK A555 36,2
Error in line 22: A555 A555 76,37
Error in line 26: OzWfjLDx A428 336,1
Error in line 31: OzWfjLDx S233 50,53
